@@ -472,6 +472,7 @@ public class MutateDemotePipeline extends GPBreedingPipeline
                 for(int x=0;x<j.trees.length;x++)
                     {
                     j.trees[x] = (GPTree)(i.trees[x].lightClone());
+		    j.trees[x].owner = j;
                     j.trees[x].child = i.trees[x].child.cloneReplacing();
                     j.trees[x].child.parent = j.trees[x];
                     j.trees[x].child.argposition = 0;
