@@ -377,6 +377,7 @@ public class CrossoverPipeline extends GPBreedingPipeline
                 if (x==t1 && res1)  // we've got a tree with a kicking cross position!
                     { 
                     j1.trees[x] = (GPTree)(parents[0].trees[x].lightClone());
+                    j1.trees[x].owner = j1;
                     j1.trees[x].child = parents[0].trees[x].child.cloneReplacing(p2,p1); 
                     j1.trees[x].child.parent = j1.trees[x];
                     j1.trees[x].child.argposition = 0;
@@ -385,6 +386,7 @@ public class CrossoverPipeline extends GPBreedingPipeline
                 else 
                     {
                     j1.trees[x] = (GPTree)(parents[0].trees[x].lightClone());
+                    j1.trees[x].owner = j1;
                     j1.trees[x].child = parents[0].trees[x].child.cloneReplacing();
                     j1.trees[x].child.parent = j1.trees[x];
                     j1.trees[x].child.argposition = 0;
@@ -396,6 +398,7 @@ public class CrossoverPipeline extends GPBreedingPipeline
                 if (x==t2 && res2)  // we've got a tree with a kicking cross position!
                     { 
                     j2.trees[x] = (GPTree)(parents[1].trees[x].lightClone());           
+                    j2.trees[x].owner = j2;
                     j2.trees[x].child = parents[1].trees[x].child.cloneReplacing(p1,p2); 
                     j2.trees[x].child.parent = j2.trees[x];
                     j2.trees[x].child.argposition = 0;
@@ -404,6 +407,7 @@ public class CrossoverPipeline extends GPBreedingPipeline
                 else 
                     {
                     j2.trees[x] = (GPTree)(parents[1].trees[x].lightClone());           
+                    j2.trees[x].owner = j2;
                     j2.trees[x].child = parents[1].trees[x].child.cloneReplacing();
                     j2.trees[x].child.parent = j2.trees[x];
                     j2.trees[x].child.argposition = 0;
