@@ -295,6 +295,7 @@ public class MutationPipeline extends GPBreedingPipeline
                     if (x==t && res)  // we've got a tree with a kicking cross position!
                         {
                         j.trees[x] = (GPTree)(i.trees[x].lightClone());
+			j.trees[x].owner = j;
                         j.trees[x].child = i.trees[x].child.cloneReplacingNoSubclone(p2,p1);
                         j.trees[x].child.parent = j.trees[x];
                         j.trees[x].child.argposition = 0;
@@ -303,6 +304,7 @@ public class MutationPipeline extends GPBreedingPipeline
                     else 
                         {
                         j.trees[x] = (GPTree)(i.trees[x].lightClone());
+			j.trees[x].owner = j;
                         j.trees[x].child = i.trees[x].child.cloneReplacing();
                         j.trees[x].child.parent = j.trees[x];
                         j.trees[x].child.argposition = 0;                   
